# TEST_TASK_MORSVYAZAUTOMATICS

./: CMakeLists.txt  README.md
src/: circleQueue.h  main.cpp
